Added some new algorithms